@@ -1,10 +1,15 @@
 # -*- coding: utf-8 -*-
 
 from zope import interface
-from zope.app.event import objectevent
+try:
+    from zope.lifecycleevent import ObjectModifiedEvent
+except ImportError:
+    # BBB for Zope 2.9
+    from zope.app.event.objectevent import ObjectModifiedEvent
 from Products.feedfeeder.interfaces import item as itemifaces
 
-class FeedItemConsumedEvent(objectevent.ObjectModifiedEvent):
+
+class FeedItemConsumedEvent(ObjectModifiedEvent):
     """Fired when a feed item has been successfully consumed.
     """
 
