@@ -1,7 +1,12 @@
 # -*- coding: utf-8 -*-
 
 from zope import interface
-from zope.app.event import interfaces as evtifaces
+try:
+    from zope.lifecycleevent import IObjectModifiedEvent
+except ImportError:
+    # BBB for Zope 2.9
+    from zope.app.event.interfaces import IObjectModifiedEvent
+
 
 class IFeedItem(interface.Interface):
     """
@@ -11,7 +16,7 @@ class IFeedItem(interface.Interface):
        """Add an enclosure.
        """
 
-class IFeedItemConsumedEvent(evtifaces.IObjectModifiedEvent):
+class IFeedItemConsumedEvent(IObjectModifiedEvent):
     """Intended to be fired after a new feed item has been successfully
     consumed.
     """
